spark.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: spark
  labels:
    name: spark
