livy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livy
  namespace: spark
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - livy.matrix.local
  rules:
    - host: livy.matrix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: livy-server
                port:
                  number: 80
